11.provisioners/main.tf
# Key Pair
resource "aws_key_pair" "example" {
  key_name   = "task"
  public_key = file("C:/Users/DELL/.ssh/id_ed25519.pub")
}

# VPC
resource "aws_vpc" "myvpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "MyVPC"
  }
}

# Subnet
resource "aws_subnet" "sub1" {
  vpc_id                  = aws_vpc.myvpc.id
  cidr_block              = "10.0.0.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "PublicSubnet"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpc.id
}

# Route Table
resource "aws_route_table" "RT" {
  vpc_id = aws_vpc.myvpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

# Route Table Association
resource "aws_route_table_association" "rta1" {
  subnet_id      = aws_subnet.sub1.id
  route_table_id = aws_route_table.RT.id
}

# Security Group
resource "aws_security_group" "webSg" {
  name   = "web"
  vpc_id = aws_vpc.myvpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# EC2 Instance
resource "aws_instance" "server" {

  ami                    = "ami-0261755bbcb8c4a84"
  instance_type          = "t2.micro"
  key_name               = aws_key_pair.example.key_name
  subnet_id              = aws_subnet.sub1.id
  vpc_security_group_ids = [aws_security_group.webSg.id]

  tags = {
    Name = "UbuntuServer"
  }

  connection {
    type        = "ssh"
    user        = "ubuntu"
    private_key = file("~/.ssh/id_ed25519")
    host        = self.public_ip
    timeout     = "2m"
  }

  # Copy file from local to remote

  provisioner "file" {
    source      = "dev.sh"
    destination = "/home/ubuntu/dev.sh"
  }

  # Execute script on remote server

  provisioner "remote-exec" {
    inline = [
      "chmod +x /home/ubuntu/dev.sh",
      "/home/ubuntu/dev.sh"
    ]
  }

  # Execute on local machine

  provisioner "local-exec" {
    command = "echo EC2 Created Successfully > file500"
  }
}

# Re-run Provisioner when dev.sh changes

resource "null_resource" "run_script" {

  triggers = {
    script_hash = filemd5("dev.sh")
  }

  connection {
    type        = "ssh"
    host        = aws_instance.server.public_ip
    user        = "ubuntu"
    private_key = file("~/.ssh/id_ed25519")
  }

  provisioner "file" {
    source      = "dev.sh"
    destination = "/home/ubuntu/dev.sh"
  }

  provisioner "remote-exec" {
    inline = [
      "chmod +x /home/ubuntu/dev.sh",
      "/home/ubuntu/dev.sh"
    ]
  }

  depends_on = [
    aws_instance.server
  ]
}

# Output

output "public_ip" {
  value = aws_instance.server.public_ip
}
